# stargen

./: .kdev_include_paths  CMakeLists.txt  FindGSL.cmake  Planetary_Habitability_Laboratory.cpp  Planetary_Habitability_Laboratory.h  README  README.md  accrete.cpp  accrete.h  andromeda.cpp  andromeda.h  andromeda2.c  andromeda2.h  c_structs.h  const.h  display.cpp  display.h  dole.cpp  dole.h  elements.cpp  elements.h  enviro.cpp  enviro.h  gas_radius_helpers.cpp  gas_radius_helpers.h  ic3094.cpp  ic3094.h  ic3094_2.c  ic3094_2.h  jimb.cpp  jimb.h  main.cpp  moon_orbits.cpp  moon_orbits.f  omega_galaxy.cpp  omega_galaxy.h  omega_galaxy2.h  planets.cpp  planets.h  radius_tables.cpp  (+19 more)
.kdev4/: stargen_2014.kdev4
help/: StarGen User's Manual.htm  help.txt
html/: StarGen.csv
